# Plot5D

./: .gitignore  Dockerfile  README.md  app.py  callbacks.py  main.py  pyproject.toml  run.sh
.github/workflows/: docker.yml
assets/: clientside.js  style.css  subplots.js
components/: alias.py  appshell.py  filters.py  header.py  mainpanel.py  navbar.py  settings.py  text.py
plot5d/: app.py  callbacks.py  cli.py  main.py  plotdata.py  sample.py  server.py
plot5d/callbacks/: __init__.py  clientside.py  graph.py  menus.py  parcoords.py  table.py
plot5d/components/: menu.py
