[project]
name = "plot5d"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=2.18.2",
    "dash-bootstrap-components>=1.6.0",
    "flask>=3.0.3",
    "loguru>=0.7.3",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
]

[tool.ruff]
line-length = 120
