[project]
name = "plot5d"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=2.18.2",
    "dash-bootstrap-components>=1.6.0",
    "flask-assets>=2.1.0",
    "flask>=3.0.3",
    "loguru>=0.7.3",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "dash-mantine-components>=0.15.2",
    "dash-iconify>=0.1.2",
]

[project.scripts]
plot5d = "plot5d.main:main"

[tool.setuptools]
packages = ["plot5d"]

[tool.ruff]
line-length = 120
